--- a/MoneyM/Storyboards/Base.lproj/Main.storyboard
+++ b/MoneyM/Storyboards/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="s4c-8t-CQo">
-    <device id="retina6_72" orientation="portrait" appearance="dark"/>
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
@@ -116,16 +116,60 @@
                                                     <constraint firstAttribute="height" constant="316" id="vAU-7d-Yci"/>
                                                 </constraints>
                                             </stackView>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="s9v-3A-5Hb">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="s9v-3A-5Hb">
                                                 <rect key="frame" x="16" y="332" width="398" height="487.33333333333326"/>
+                                                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="6Vi-fa-O33">
-                                                        <rect key="frame" x="20" y="55.333332061767578" width="358" height="43.666667938232422"/>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="80" id="6Vi-fa-O33" customClass="TransactionTableViewCell" customModule="MoneyM" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="55.333332061767578" width="398" height="80"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Vi-fa-O33" id="JH4-25-D5P">
-                                                            <rect key="frame" x="0.0" y="0.0" width="358" height="43.666667938232422"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="398" height="80"/>
                                                             <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Qk-oc-yaV">
+                                                                    <rect key="frame" x="63.999999999999993" y="10.999999999999998" width="70.333333333333286" height="20.333333333333329"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5BD-ob-iLe">
+                                                                    <rect key="frame" x="64" y="49.666666666666664" width="35" height="19.333333333333336"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gp4-7f-IVQ">
+                                                                    <rect key="frame" x="314.66666666666669" y="29.333333333333329" width="63.333333333333314" height="21.666666666666671"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pan-v7-Xij">
+                                                                    <rect key="frame" x="16" y="20" width="40" height="40"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="40" id="3i5-xf-1bR"/>
+                                                                        <constraint firstAttribute="height" constant="40" id="p4E-Tk-zgv"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="bottomMargin" secondItem="5BD-ob-iLe" secondAttribute="bottom" id="9Ph-i6-P8d"/>
+                                                                <constraint firstItem="Gp4-7f-IVQ" firstAttribute="trailing" secondItem="JH4-25-D5P" secondAttribute="trailingMargin" id="FfL-53-GM7"/>
+                                                                <constraint firstItem="5BD-ob-iLe" firstAttribute="leading" secondItem="pan-v7-Xij" secondAttribute="trailing" constant="8" id="Fxs-va-ysj"/>
+                                                                <constraint firstItem="8Qk-oc-yaV" firstAttribute="leading" secondItem="pan-v7-Xij" secondAttribute="trailing" constant="8" id="PMe-4W-zPS"/>
+                                                                <constraint firstItem="pan-v7-Xij" firstAttribute="leading" secondItem="JH4-25-D5P" secondAttribute="leading" constant="16" id="aEV-hp-kxQ"/>
+                                                                <constraint firstItem="Gp4-7f-IVQ" firstAttribute="centerY" secondItem="JH4-25-D5P" secondAttribute="centerY" id="cEb-h9-Edq"/>
+                                                                <constraint firstItem="pan-v7-Xij" firstAttribute="centerY" secondItem="JH4-25-D5P" secondAttribute="centerY" id="pxJ-ug-bA3"/>
+                                                                <constraint firstItem="8Qk-oc-yaV" firstAttribute="top" secondItem="JH4-25-D5P" secondAttribute="topMargin" id="uR4-ZU-hWH"/>
+                                                            </constraints>
                                                         </tableViewCellContentView>
+                                                        <connections>
+                                                            <outlet property="amountLabel" destination="Gp4-7f-IVQ" id="oSe-hR-Jzo"/>
+                                                            <outlet property="categoryImageView" destination="pan-v7-Xij" id="PMw-ZT-lsg"/>
+                                                            <outlet property="categoryLabel" destination="8Qk-oc-yaV" id="1gy-CI-hww"/>
+                                                            <outlet property="noteLabel" destination="5BD-ob-iLe" id="oQp-fo-yCK"/>
+                                                        </connections>
                                                     </tableViewCell>
                                                 </prototypes>
                                             </tableView>
@@ -187,7 +231,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="947.32824427480909" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="946.04651162790697" y="3.218884120171674"/>
         </scene>
         <!--Test-->
         <scene sceneID="WO9-lB-qPs">
@@ -207,7 +251,7 @@
                                 <items>
                                     <navigationItem title="Add transaction" id="8B5-ob-K9I">
                                         <barButtonItem key="leftBarButtonItem" style="plain" id="aoI-Bo-3il">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="hv7-CF-1xH">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="hv7-CF-1xH">
                                                 <rect key="frame" x="20" y="11" width="95" height="34.333333333333336"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Button"/>
@@ -399,6 +443,9 @@
         </systemColor>
         <systemColor name="quaternarySystemFillColor">
             <color red="0.4549019608" green="0.4549019608" blue="0.50196078430000002" alpha="0.080000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="secondarySystemGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
